prazo de duas horas para liberar nota de probatório

--- a/professores/templates/professores/resultado_bancas.html
+++ b/professores/templates/professores/resultado_bancas.html
@@ -62,7 +62,8 @@
 
   </div>
   <div class="ml-2">
-    {% lng "Observação: As notas das bancas só serão fechadas quando todos os avaliadores tiverem avaliado (incluindo o orientador nas bancas intermediárias e finais) e depois de 24 horas que a última avaliação foi feita." "Note: The grades of the examining boards will only be closed when all evaluators have evaluated (including the advisor in the intermediate and final boards) and after 24 hours that the last evaluation was made." %}
+    {% lng "Observação: As notas das bancas só serão fechadas quando todos os avaliadores tiverem avaliado (incluindo o orientador nas bancas intermediárias e finais)" "Note: The grades of the examining boards will only be closed when all evaluators have evaluated (including the advisor in the intermediate and final boards)" %}
+    {% lng "e finais) e depois de 24 horas (bancas regulares) ou 2 horas (bancas probatório) que a última avaliação foi feita." "and after 24 hours (regular examinations) or 2 hours (probation examinations) that the last evaluation was made." %}
   </div>
 
   {% include "edicoes_ajax.html" %}
