ajustando caminho de CSS

--- a/projetos/templates/projetos/projeto_infos.html
+++ b/projetos/templates/projetos/projeto_infos.html
@@ -20,7 +20,7 @@
 {% block head %}
 
   <link rel="stylesheet" href="{% static 'css/caixa_rolante.css' %}">
-  <link rel="stylesheet" href="{% static 'css/mostra_horarios.css' %}">
+  <link rel="stylesheet" href="{% static 'estudantes/css/mostra_horarios.css' %}">
   <link rel="stylesheet" href="{% static 'css/tab_arrend.css' %}"> {% comment %} SETAS {% endcomment %}
   <link rel="stylesheet" href="{% static 'css/div_arrend.css' %}">
   <script src="{% static 'js/Chart.min.js' %}"></script>
