badge sem problema

--- a/propostas/templates/propostas/propostas_apresentadas.html
+++ b/propostas/templates/propostas/propostas_apresentadas.html
@@ -134,7 +134,7 @@
               </td>
 
               <td class="text-center" style="font-size: 12px;">
-                {% include "tipo_proposta.html" with descr_short=True %}
+                {% include "tipo_proposta.html" with descr_short=False %}
               </td>
 
               {% spaceless %}
