--- a/templates/tipo_proposta.html
+++ b/templates/tipo_proposta.html
@@ -13,7 +13,7 @@
       {% if descr_long %}
         {% lng "Proposta Internacional de Projeto, a comunicação do projeto será em inglês." "International Project Proposal, the project communication will be in English." %}<br>
       {% elif descr_short %}
-        <span class="badge badge-primary badge-pill mr-1" title="{% lng 'Internacional' 'International' %}">IN</span>
+        <span class="badge badge-primary badge-pill mr-1" title="Internacional">IN</span>
       {% else %}
         <span class="badge badge-primary badge-pill mr-1"><i class="fas fa-globe-americas"></i> {% lng "Internacional" "International" %}</span>
       {% endif %}
@@ -23,7 +23,7 @@
       {% if descr_long %}
         {% lng "Proposta em Programa de Intercâmbio." "International Exchange Program Proposal." %}<br>
       {% elif descr_short %}
-        <span class="badge badge-info badge-pill mr-1" title="{% lng 'Intercâmbio' 'Exchange' %}">IC</span>
+        <span class="badge badge-info badge-pill mr-1" title="Intercâmbio">IC</span>
       {% else %}
         <span class="badge badge-info badge-pill mr-1"><i class="fas fa-plane-departure"></i> {% lng "Intercâmbio" "Exchange" %}</span>
       {% endif %}
@@ -33,7 +33,7 @@
       {% if descr_long %}
         {% lng "Proposta em colaboração com" "Proposal in collaboration with" %}: {{ proposta.colaboracao }}.<br>
       {% elif descr_short %}
-        <span class="badge badge-secondary badge-pill mr-1" title="{% lng 'Colaboração' 'Collaboration' %}">CO</span>
+        <span class="badge badge-secondary badge-pill mr-1" title="Colaboração">CO</span>
       {% else %}
         <span class="badge badge-secondary badge-pill mr-1"><i class="fas fa-handshake"></i> {% lng "Em colaboração com" "In collaboration with" %}: {{ proposta.colaboracao }}</span>
       {% endif %}
@@ -43,7 +43,7 @@
       {% if descr_long %}
         {% lng "Proposta de grupo de estudantes regulares empreendendo em próprio projeto." "Regular students group proposal undertaking their own project." %}<br>
       {% elif descr_short %}
-        <span class="badge badge-warning badge-pill mr-1" title="{% lng 'Empreendendo' 'Entrepreneurship' %}">E!</span>
+        <span class="badge badge-warning badge-pill mr-1" title="Empreendendo">E!</span>
       {% else %}
         <span class="badge badge-warning badge-pill mr-1"><i class="fas fa-rocket"></i> {% lng "Empreendendo" "Entrepreneurship" %}</span>
       {% endif %}
@@ -52,7 +52,7 @@
   {% if com_tipo %}</p>{% endif %}
 {% else %}
   {% if descr_short %}
-    <span class="badge badge-light text-dark border border-secondary badge-pill mr-1" title="{% lng 'Regular' 'Regular' %}">RE</span>
+    <span class="badge badge-light text-dark border border-secondary badge-pill mr-1" title="Regular">RE</span>
   {% else %}
     <span class="badge badge-light text-dark border border-secondary badge-pill mr-1">{% lng "Regular" "Regular" %}</span>
   {% endif %}
