--- a/users/templates/users/estudantes_inscritos.html
+++ b/users/templates/users/estudantes_inscritos.html
@@ -53,7 +53,7 @@
                       ({{opcao.proposta.organizacao.nome}})
                       <br>
                     {% empty %}
-                      Estudante não escolheu opções de proposta de projetos
+                    {% lng "Estudante não escolheu opções de proposta de projetos" "Student has not chosen project proposal options" %}
                     {% endfor %}
                   {% endfor %}">{{aluno.user.get_full_name}}</a>
             </td>
