--- a/templates/montando_grupos_auto.html
+++ b/templates/montando_grupos_auto.html
@@ -56,6 +56,8 @@
         $.ajax({
           url: "{% url 'propor' %}",
           dataType: "JSON",
+          method: "POST",
+          headers: {"X-CSRFToken": "{{ csrf_token }}"},
           success: function (data) {
             if (data.atualizado) {
               location.reload();
